# rust-book

./: .gitignore  Cargo.toml  README.md
adder/src/: lib.rs
adder/tests/: integration_test.rs
advanced_traits/src/: main.rs
advanced_types/src/: main.rs
aggregator/src/: lib.rs
branches/src/: main.rs
ch3_project_christmas/: Cargo.toml
ch3_project_christmas/src/: main.rs
ch3_project_fibonacci/: Cargo.toml
ch3_project_fibonacci/src/: main.rs
ch3_project_temps/: Cargo.toml
ch3_project_temps/src/: main.rs
ch8_project_company/: Cargo.toml
ch8_project_company/src/: main.rs
ch8_project_median_mode/: Cargo.toml
ch8_project_median_mode/src/: main.rs
ch8_project_pig_latin/: Cargo.toml
ch8_project_pig_latin/src/: main.rs
closures/src/: main.rs
enums/src/: main.rs
functions/src/: main.rs
generics/src/: main.rs
guessing_game/src/: main.rs
hashmaps/src/: main.rs
hello-async/src/: main.rs
hello_macro_test/: Cargo.toml
hello_world/: main
iterators/src/: lib.rs  main.rs
lifetimes/src/: main.rs
macros/src/: main.rs
message_passing/src/: main.rs
minigrep/src/: lib.rs  main.rs
mutexes/src/: main.rs
oop/src/: lib.rs  main.rs
patterns/src/: main.rs
rectangles/src/: main.rs
restaurant/src/: front_of_house.rs  lib.rs
result_type/: Cargo.toml
result_type/src/: main.rs
server/: 404.html  index.html
server/src/: lib.rs  main.rs
slices/src/: main.rs
smart_pointers/src/: lib.rs  main.rs
strings/src/: main.rs
structs/src/: main.rs
threads/src/: main.rs
traits/: Cargo.toml
unsafe_rust/: Cargo.toml  build.rs
(+7 files in other folders)
